Revision history for Perl extension HTML::Selector::XPath

0.05 to be released
      - Add CSS3 "=*" operator for real substring matching
      - Add CSS3 ":first-of-type" and ":nth-of-type()" pseudo-attributes
        (but if you're using them, you're likely better off using XPath already)
      - Add CSS3 "~" operator
      - Adopt tests for "~" operator from RT #61990
      - Add :contains() selector (only immediate child nodes)

0.04  Sat Feb 27 01:43:00 PST 2010
      - No code change. Fix the packaging issue and typo in the doc

0.03  Sat Nov 10 20:26:47 PST 2007
      * Added nth-child() support (Thanks to Tokuhiro Matsuno)

0.02  Tue Oct  3 22:43:39 JST 2006
      * Added support for :not() without XPath 2.0
          (Thanks to Aristotle Pegaltzis)

0.01  Sun Sep 24 20:10:35 2006
      - original version