@@ -7,6 +7,8 @@ Revision history for Perl extension HTML::Selector::XPath
       - Add CSS3 "~" operator
       - Adopt tests for "~" operator from RT #61990
       - Add :contains() selector (only immediate child nodes)
+      - Support implicit selectors like "> em" (translated to "* > em"
+        Fixes RT #50131
 
 0.04  Sat Feb 27 01:43:00 PST 2010
       - No code change. Fix the packaging issue and typo in the doc
